[package]
name = "cliche"
version = "1.0.2"
authors = ["Greg Troszak <gdtroszak@gmail.com>"]
description = "Dead simple static site generator."
edition = "2021"
license = "MIT"
repository = "https://github.com/gdtroszak/cliche"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
fs_extra = "1.3.0"
handlebars = "5.1.2"
pulldown-cmark = "0.11.0"
regex = "1.10.5"
serde_json = "1.0.118"
serde_yaml = "0.9.34"
shellexpand = "2.1"
walkdir = "2.5.0"
